# PolySeg

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  NOTICE  PolySeg.pro  README.md  THIRD-PARTY-LICENSES.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  polygoncanvas.cpp  polygoncanvas.h  projectconfig.cpp  projectconfig.h  projectsettingsdialog.cpp  projectsettingsdialog.h  superlabel.cpp  superlabel.h
.claude/: CLAUDE.md
.github/: FUNDING.yml  INSTRUCTIONS.md
.github/workflows/: build.yml
docs/: AVAILABLE_PLUGINS.md  BATCH_DETECTION_GUIDE.md  DEPLOYMENT_EXAMPLES.md  PLUGIN_ARCHITECTURE.md
examples/plugins/: README.md  detectron2_plugin.py  smp_plugin.py  yolact_plugin.py
examples/plugins/requirements/: detectron2.txt  sam.txt  smp.txt  yolact.txt
plugins/: .gitignore  README.md
resources/: model_registry.json  resources.qrc
src/: PolySeg.pro  aimodelsettingstab.cpp  aimodelsettingstab.h  aimodelsettingstab.ui  aipluginmanager.cpp  aipluginmanager.h  importexportsettingstab.cpp  importexportsettingstab.h  importexportsettingstab.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metadataimporter.cpp  metadataimporter.h  metadataimportsettingsdialog.cpp  metadataimportsettingsdialog.h  metadataimportsettingsdialog.ui  modelcomparisondialog.cpp  modelcomparisondialog.h  modelcomparisondialog.ui  modeldownloadmanager.cpp  modeldownloadmanager.h  modelregistrationdialog.cpp  modelregistrationdialog.h  modelregistrationdialog.ui  pluginwizard.cpp  pluginwizard.h  polygoncanvas.cpp  polygoncanvas.h  projectconfig.cpp  projectconfig.h  projectsettingsdialog.cpp  projectsettingsdialog.h  projectsettingstab.cpp  projectsettingstab.h  projectsettingstab.ui  pythonenvironmentmanager.cpp  pythonenvironmentmanager.h  settingsdialog.cpp  (+10 more)
src/wizardpages/: configurationpage.cpp  configurationpage.h  configurationpage.ui  customconfigurationpage.cpp  customconfigurationpage.h  customconfigurationpage.ui  custompluginpage.cpp  custompluginpage.h  custompluginpage.ui  downloadpage.cpp  downloadpage.h  downloadpage.ui  modelselectionpage.cpp  modelselectionpage.h  modelselectionpage.ui  modelselectionpage_detectron2.cpp  modelselectionpage_detectron2.h  modelselectionpage_detectron2.ui  modelselectionpage_smp.cpp  modelselectionpage_smp.h  modelselectionpage_smp.ui  pluginselectionpage.cpp  pluginselectionpage.h  pluginselectionpage.ui  pretrainedmodelpage.cpp  pretrainedmodelpage.h  pretrainedmodelpage.ui  pretrainedmodelpage_detectron2.cpp  pretrainedmodelpage_detectron2.h  pretrainedmodelpage_detectron2.ui  pretrainedmodelpage_smp.cpp  pretrainedmodelpage_smp.h  pretrainedmodelpage_smp.ui  summarypage.cpp  summarypage.h  summarypage.ui  welcomepage.cpp  welcomepage.h  welcomepage.ui
tests/: main_test.cpp
